WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312479
[AutoFill Debugging] Click location argument should ignore obscured content insets
https://bugs.webkit.org/show_bug.cgi?id=312479
Summary
[AutoFill Debugging] Click location argument should ignore obscured content i...
Wenson Hsieh
Reported
2026-04-16 09:18:34 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-16 09:18:40 PDT
<
rdar://problem/174928145
>
Wenson Hsieh
Comment 2
2026-04-16 09:22:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62900
EWS
Comment 3
2026-04-16 12:12:30 PDT
Committed
311396@main
(d0ae0830acb6): <
https://commits.webkit.org/311396@main
> Reviewed commits have been landed. Closing PR #62900 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug