[AutoFill Debugging] Click location argument should ignore obscured content insets https://bugs.webkit.org/show_bug.cgi?id=312479 rdar://174928145

Reviewed by Abrar Rahman Protyasha.

Passing in the origin as a click location should simulate a click over the top left corner in the
webpage (as opposed to the top left corner of the web view) when nonzero top or left obscured
content insets are set.

Test: fast/text-extraction/debug-text-extraction-interaction-with-content-inset.html

* LayoutTests/fast/text-extraction/debug-text-extraction-interaction-with-content-inset.html: Added.
* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _convertToWebCoreInteraction:]):

Canonical link: https://commits.webkit.org/311396@main